--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <header>
 
     <ul>
-        <li><a href="./homepage.html">Gmail</a></li>
-        <li><a href="./homepage.html">Images</a></li>
+        <li><a href="./index.html">Gmail</a></li>
+        <li><a href="./index.html">Images</a></li>
     </ul>
     
 </header>
 <main>
 <div>
-    <a href="./homepage.html"><img src="./assets/google_PNG19644.png" alt="Google" class="google-logo"></a>
+    <a href="./index.html"><img src="./assets/google_PNG19644.png" alt="Google" class="google-logo"></a>
 </div>
 <div>
 <div class="search">
@@ -33,9 +33,9 @@
 <footer>
 <nav class="footernav">
     <ul>
-        <li><a href="./homepage.html">Adverstising</a></li>
-        <li><a href="./homepage.html">Business</a></li>
-        <li><a href="./homepage.html">About</a></li>
+        <li><a href="./index.html">Adverstising</a></li>
+        <li><a href="./index.html">Business</a></li>
+        <li><a href="./index.html">About</a></li>
     </ul>
 </nav>
 
